--- a/sources/package-b/tsconfig.json
+++ b/sources/package-b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.outputs.json",
+  "extends": "../../tsconfig.sources.json",
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src"
