--- a/sources/package-a/tsconfig.json
+++ b/sources/package-a/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "extends": "../../tsconfig.sources.json",
-  "include": [
-    "src"
-  ],
   "compilerOptions": {
     "outDir": "dist",
-  }
+    "rootDir": "src"
+  },
+  "references": [
+    {
+      "path": "../package-b"
+    }
+  ]
 }
