--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     }
   },
   "devDependencies": {
+    "@types/bun": "^1.2.15",
     "update-ts-references": "^3.6.0"
   },
   "version": "1.0.0",
