--- a/tsconfig.sources.json
+++ b/tsconfig.sources.json
@@ -21,6 +21,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "verbatimModuleSyntax": true
+    "verbatimModuleSyntax": true,
+    "jsx": "react-jsx",
   }
 }
