doc: bunup speed and bundle size

--- a/outputs/app-1/package.json
+++ b/outputs/app-1/package.json
@@ -6,9 +6,8 @@
     "build": "bunup src/index.ts"
   },
   "dependencies": {
-    "@/a": "workspace:*"
-  },
-  "devDependencies": {
-    "bunup": "^0.8.23"
+    "@/a": "workspace:*",
+    "@/b": "workspace:*",
+    "@/c": "workspace:*"
   }
 }
