--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mono",
   "scripts": {
+    "dev": "update-ts-references && tsc -b --extendedDiagnostics",
     "build": "update-ts-references && tsc -b --extendedDiagnostics",
     "postinstall": "update-ts-references"
   },
@@ -14,12 +15,12 @@
       "outputs/*"
     ],
     "catalog": {
-      "typescript": "^5.8.3"
+      "typescript": "^5.8.3",
+      "bunup": "^5.8.3",
+      "@types/bun": "^1.2.15"
     }
   },
   "devDependencies": {
-    "@types/bun": "^1.2.15",
-    "bunup": "^0.8.25",
     "update-ts-references": "^3.6.0"
   },
   "version": "1.0.0",
