--- a/sources/package-b/package.json
+++ b/sources/package-b/package.json
@@ -1,8 +1,10 @@
 {
+  "version": "0.0.0",
   "name": "@/b",
   "main": "./src/index.ts",
   "type": "module",
-  "dependencies": {
-    "valibot": "^1.1.0"
+  "devDependencies": {
+    "valibot": "^1.1.0",
+    "@/config-tsconfig": "workspace:*"
   }
 }
