--- a/sources/package-b/tsconfig.json
+++ b/sources/package-b/tsconfig.json
@@ -1,7 +1,12 @@
 {
-  "extends": "../../tsconfig.sources.json",
+  "extends": "@/config-tsconfig/sources",
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src"
-  }
+  },
+  "references": [
+    {
+      "path": "../../internals/config-tsconfig"
+    }
+  ]
 }
