--- a/sources/package-c/package.json
+++ b/sources/package-c/package.json
@@ -1,5 +1,9 @@
 {
+  "version": "0.0.0",
   "name": "@/c",
   "main": "./src/index.ts",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@/config-tsconfig": "workspace:*"
+  }
 }
