--- a/sources/package-a/package.json
+++ b/sources/package-a/package.json
@@ -1,8 +1,10 @@
 {
+  "version": "0.0.0",
   "name": "@/a",
   "main": "./src/index.ts",
   "type": "module",
   "dependencies": {
-    "@/c": "workspace:*"
+    "@/c": "workspace:*",
+    "@/config-tsconfig": "workspace:*"
   }
 }
