--- a/sources/package-a/tsconfig.json
+++ b/sources/package-a/tsconfig.json
@@ -1,10 +1,13 @@
 {
-  "extends": "../../tsconfig.sources.json",
+  "extends": "@/config-tsconfig/sources",
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src"
   },
   "references": [
+    {
+      "path": "../../internals/config-tsconfig"
+    },
     {
       "path": "../package-c"
     }
