--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,21 @@
   "files": [],
   "references": [
     {
+      "path": "internals/config-bunup"
+    },
+    {
+      "path": "internals/config-tsconfig"
+    },
+    {
+      "path": "internals/config-vite"
+    },
+    {
+      "path": "internals/script-bun"
+    },
+    {
+      "path": "outputs/app-1"
+    },
+    {
       "path": "sources/package-a"
     },
     {
@@ -9,9 +24,6 @@
     },
     {
       "path": "sources/package-c"
-    },
-    {
-      "path": "outputs/app-1"
     }
   ],
   "compilerOptions": {}
