--- a/outputs/redwood-sdk/package.json
+++ b/outputs/redwood-sdk/package.json
@@ -4,9 +4,6 @@
   "description": "Build fast, server-driven webapps on Cloudflare with SSR, RSC, and realtime. ",
   "main": "index.js",
   "type": "module",
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "private": true,
   "scripts": {
     "build": "vite build",
@@ -14,15 +11,15 @@
     "dev:init": "rw-scripts dev-init",
     "preview": "vite preview",
     "worker:run": "rw-scripts worker-run",
-    "clean": "npm run clean:vite",
+    "clean": "bun run clean:vite",
     "clean:vite": "rm -rf ./node_modules/.vite",
-    "release": "rw-scripts ensure-deploy-env && npm run clean && prisma generate && RWSDK_DEPLOY=1 npm run build && wrangler deploy",
+    "release": "rw-scripts ensure-deploy-env && bun run clean && prisma generate && RWSDK_DEPLOY=1 bun run build && wrangler deploy",
     "migrate:dev": "prisma generate && wrangler d1 migrations apply DB --local",
     "migrate:prd": "wrangler d1 migrations apply DB --remote",
     "migrate:new": "rw-scripts migrate-new",
-    "seed": "npm run worker:run ./src/scripts/seed.ts",
+    "seed": "bun run worker:run ./src/scripts/seed.ts",
     "generate": "rw-scripts ensure-env && prisma generate && wrangler types",
-    "check": "npm run generate && npm run types",
+    "check": "bun run generate && bun run types",
     "types": "tsc",
     "prepare": "vibe-rules install cursor"
   },
@@ -34,13 +31,14 @@
     "rwsdk": "0.0.88"
   },
   "devDependencies": {
+    "@/config-tsconfig": "workspace:*",
+    "vite": "catalog:",
     "@types/node": "^22.15.29",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "prisma": "~6.8.2",
     "typescript": "^5.8.3",
     "vibe-rules": "^0.2.55",
-    "vite": "^6.3.16",
     "wrangler": "^4.18.0"
   },
   "pnpm": {
