setup: vscode settings

--- a/internals/config-bunup/tsconfig.json
+++ b/internals/config-bunup/tsconfig.json
@@ -5,7 +5,7 @@
     "**/dist"
   ],
   "files": [
-    "bunup.config.ts"
+    "bunup.config.utils.ts"
   ],
   "compilerOptions": {
     "outDir": "dist",
