--- a/internals/config-bunup/package.json
+++ b/internals/config-bunup/package.json
@@ -2,10 +2,13 @@
   "version": "0.0.0",
   "name": "@/config-bunup",
   "type": "module",
-  "main": "./bunup.config.ts",
-  "types": "./bunup.config.ts",
+
   "devDependencies": {
     "bunup": "catalog:",
     "@/config-tsconfig": "workspace:*"
+  },
+  "exports": {
+    ".": "./bunup.config.ts",
+    "./utils": "./bunup.config.utils.ts"
   }
 }
