chore: exclude ts files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "explorer.excludeGitIgnore": true,
+  "explorer.excludeGitIgnore": false,
 
   // ---- typescript ----
   "typescript.tsdk": "./node_modules/typescript/lib",
