--- a/internals/script-bun/tsconfig.json
+++ b/internals/script-bun/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "@/config-tsconfig/internals",
+  "exclude": [
+    "**/node_modules",
+    "**/dist"
+  ],
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src"
