--- a/sources/package-b/tsconfig.json
+++ b/sources/package-b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "@/config-tsconfig/sources",
+  "exclude": [
+    "**/node_modules",
+    "**/dist"
+  ],
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src"
