--- a/internals/config-bunup/package.json
+++ b/internals/config-bunup/package.json
@@ -1,11 +1,11 @@
 {
   "version": "0.0.0",
-  "name": "@/config-bunup",
+  "name": "@mono/config-bunup",
   "type": "module",
-
+  "main": "./bunup.config.ts",
   "devDependencies": {
     "bunup": "catalog:",
-    "@/config-tsconfig": "workspace:*"
+    "@mono/config-tsconfig": "workspace:*"
   },
   "exports": {
     ".": "./bunup.config.ts",
