--- a/internals/config-bunup/tsconfig.json
+++ b/internals/config-bunup/tsconfig.json
@@ -1,19 +1,3 @@
 {
-  "extends": "@/config-tsconfig/internals",
-  "exclude": [
-    "**/node_modules",
-    "**/dist"
-  ],
-  "files": [
-    "bunup.config.utils.ts"
-  ],
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "."
-  },
-  "references": [
-    {
-      "path": "../config-tsconfig"
-    }
-  ]
+  "extends": "@mono/config-tsconfig/internals"
 }
