--- a/internals/config-tsconfig/tsconfig.outputs.json
+++ b/internals/config-tsconfig/tsconfig.outputs.json
@@ -1,26 +1,8 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "lib": [
-      "ESNext"
-    ],
-    "target": "es2024",
-    "module": "ESNext",
-    "moduleDetection": "force",
-    "moduleResolution": "bundler",
-    "composite": true,
-    "declaration": true,
-    "declarationMap": true,
+    "target": "es2022",
+    "declarationMap": false,
     "emitDeclarationOnly": false,
-    "incremental": true,
-    "isolatedModules": true,
-    "isolatedDeclarations": true,
-    "noEmit": false,
-    "noEmitOnError": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true,
-    "verbatimModuleSyntax": true
   }
 }
