--- a/internals/config-tsconfig/tsconfig.sources.json
+++ b/internals/config-tsconfig/tsconfig.sources.json
@@ -1,27 +1,7 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "lib": [
-      "ESNext"
-    ],
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleDetection": "force",
-    "moduleResolution": "bundler",
-    "composite": true,
-    "declaration": true,
-    "declarationMap": true,
     "emitDeclarationOnly": true,
-    "incremental": true,
-    "isolatedModules": true,
-    "isolatedDeclarations": true,
-    "noEmit": false,
-    "noEmitOnError": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true,
-    "verbatimModuleSyntax": true,
-    "jsx": "react-jsx",
+    "sourceMap": true
   }
 }
