--- a/internals/script-bun/package.json
+++ b/internals/script-bun/package.json
@@ -1,11 +1,11 @@
 {
   "version": "0.0.0",
-  "name": "@/script-bun",
+  "name": "@mono/script-bun",
   "type": "module",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "devDependencies": {
     "@types/bun": "catalog:",
-    "@/config-tsconfig": "workspace:*"
+    "@mono/config-tsconfig": "workspace:*"
   }
 }
