--- a/outputs/redwood-sdk/package.json
+++ b/outputs/redwood-sdk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@/redwood-sdk",
+  "name": "@mono/redwood-sdk",
   "version": "1.0.0",
   "description": "Build fast, server-driven webapps on Cloudflare with SSR, RSC, and realtime. ",
   "main": "index.js",
@@ -28,10 +28,11 @@
     "@prisma/client": "~6.8.2",
     "@simplewebauthn/browser": "^13.1.0",
     "@simplewebauthn/server": "^13.1.1",
-    "rwsdk": "0.0.88"
+    "rwsdk": "0.0.88",
+    "@mono/config-tsconfig": "workspace:*"
   },
   "devDependencies": {
-    "@/config-tsconfig": "workspace:*",
+    "@mono/config-tsconfig": "workspace:*",
     "vite": "catalog:",
     "@types/node": "^22.15.29",
     "@types/react": "^19.1.6",
@@ -39,7 +40,7 @@
     "prisma": "~6.8.2",
     "typescript": "^5.8.3",
     "vibe-rules": "^0.2.55",
-    "wrangler": "^4.18.0"
+    "wrangler": "^4.19.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
