--- a/outputs/redwood-sdk/tsconfig.json
+++ b/outputs/redwood-sdk/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@mono/config-tsconfig",
   "compilerOptions": {
     "target": "es2021",
     "lib": [
@@ -27,16 +28,13 @@
     "checkJs": false,
     "noEmit": true,
     "isolatedModules": true,
+    "isolatedDeclarations": false,
     /* Allow 'import x from y' when a module doesn't have a default export. */
     "allowSyntheticDefaultImports": true,
     /* Ensure that casing is correct in imports. */
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
-  },
-  "references": [
-    {
-      "path": "../../internals/config-tsconfig"
-    }
-  ]
+    // "disableSolutionSearching": true
+  }
 }
