--- a/outputs/redwood-sdk/package.json
+++ b/outputs/redwood-sdk/package.json
@@ -28,8 +28,7 @@
     "@prisma/client": "~6.8.2",
     "@simplewebauthn/browser": "^13.1.0",
     "@simplewebauthn/server": "^13.1.1",
-    "rwsdk": "0.0.88",
-    "@mono/config-tsconfig": "workspace:*"
+    "rwsdk": "0.0.88"
   },
   "devDependencies": {
     "@mono/config-tsconfig": "workspace:*",
