--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "lint": "turbo lint",
     "postinstall": "bun check-types",
     "check-types": "tsc -b --incremental --extendedDiagnostics && update-ts-references",
-    "build:bunup": "bunup --config ./internals/config-bunup/bunup.config.ts && bun check-types"
+    "build:bunup": "bunup --config ./configs/config-bunup/bunup.config.ts && bun check-types"
   },
   "packageManager": "bun@1.2.15",
   "engines": {
@@ -14,9 +14,9 @@
   },
   "workspaces": {
     "packages": [
-      "internals/*",
-      "outputs/*",
-      "sources/*"
+      "configs/*",
+      "apps/*",
+      "packages/*"
     ],
     "catalog": {
       "@types/bun": "^1.2.15",
