refactor: shorten packages names

--- a/apps/app-1/tsconfig.json
+++ b/apps/app-1/tsconfig.json
@@ -13,13 +13,13 @@
   },
   "references": [
     {
-      "path": "../../packages/package-a"
+      "path": "../../packages/a"
     },
     {
-      "path": "../../packages/package-b"
+      "path": "../../packages/b"
     },
     {
-      "path": "../../packages/package-c"
+      "path": "../../packages/c"
     }
   ]
 }
