--- a/packages/a/package.json
+++ b/packages/a/package.json
@@ -3,8 +3,11 @@
   "name": "@mono/a",
   "main": "./src/index.ts",
   "type": "module",
+  "scripts": {
+    "test": "bun test"
+  },
   "dependencies": {
     "@mono/c": "workspace:*",
-    "@mono/config-tsconfig": "workspace:*"
+    "@mono/tsconfig": "workspace:*"
   }
 }
