--- a/packages/c/package.json
+++ b/packages/c/package.json
@@ -4,7 +4,7 @@
   "main": "./src/index.ts",
   "type": "module",
   "devDependencies": {
-    "@mono/config-tsconfig": "workspace:*",
+    "@mono/tsconfig": "workspace:*",
     "@mono/b": "workspace:*"
   }
 }
