--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   "typescript.tsdk": "./node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "typescript.tsserver.maxTsServerMemory": 3999,
+  "typescript.disableAutomaticTypeAcquisition": true,
   // ---- formatting ----
   "editor.codeActionsOnSave": {
     "source.fixAll": "always",
