--- a/apps/redwood-sdk/tsconfig.json
+++ b/apps/redwood-sdk/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@mono/config-tsconfig",
+  "extends": "@mono/tsconfig",
   "compilerOptions": {
     "target": "es2021",
     "lib": [
