--- a/configs/bunup/tsconfig.json
+++ b/configs/bunup/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@mono/config-tsconfig",
+  "extends": "@mono/tsconfig",
   "compilerOptions": {
     "isolatedDeclarations": false,
     "emitDeclarationOnly": true,
