--- a/configs/tsconfig/tsconfig.apps.json
+++ b/configs/tsconfig/tsconfig.apps.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "target": "es2022",
     "declarationMap": false,
-    "emitDeclarationOnly": false,
+    "emitDeclarationOnly": true,
   }
 }
