--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "lint": "turbo lint",
     "postinstall": "bun check-types",
     "check-types": "tsc -b --incremental --extendedDiagnostics && update-ts-references",
-    "build:bunup": "bunup --config ./configs/config-bunup/bunup.config.ts && bun check-types"
+    "build:bunup": "bunup --config ./configs/bunup/bunup.config.ts && bun check-types"
   },
   "packageManager": "bun@1.2.15",
   "engines": {
@@ -26,8 +26,8 @@
     }
   },
   "devDependencies": {
-    "@mono/config-bunup": "workspace:*",
-    "@mono/config-tsconfig": "workspace:*",
+    "@mono/bunup": "workspace:*",
+    "@mono/tsconfig": "workspace:*",
     "@mono/script-bun": "workspace:*",
     "turbo": "^2.5.4",
     "update-ts-references": "^3.6.0"
