--- a/packages/b/package.json
+++ b/packages/b/package.json
@@ -5,6 +5,6 @@
   "type": "module",
   "devDependencies": {
     "valibot": "^1.1.0",
-    "@mono/config-tsconfig": "workspace:*"
+    "@mono/tsconfig": "workspace:*"
   }
 }
