--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,11 @@
         "^lint"
       ]
     },
+    "test": {
+      "dependsOn": [
+        "^test"
+      ]
+    },
     "dev": {
       "cache": false,
       "persistent": true
