--- a/configs/tsconfig/tsconfig.base.json
+++ b/configs/tsconfig/tsconfig.base.json
@@ -1,8 +1,10 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
+    "types": [],
     "lib": [
-      "ESNext"
+      "ESNext",
+      "WebWorker"
     ],
     "target": "ESNext",
     "module": "ESNext",
