test: accurate types

--- a/packages/b/tsconfig.json
+++ b/packages/b/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "dist",
     "rootDir": "src",
     "isolatedDeclarations": false,
-    "emitDeclarationOnly": true
+    "emitDeclarationOnly": true,
+    "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo"
   }
 }
