--- a/packages/a/tsconfig.json
+++ b/packages/a/tsconfig.json
@@ -1,18 +1,19 @@
 {
   "extends": "@mono/tsconfig/packages",
   "exclude": [
-    "src/**/*.test.ts",
-    "src/**/*.test.tsx",
+    "**/*.test.ts",
+    "**/*.test.tsx",
     "dist",
     "node_modules"
   ],
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
+    "**/*.ts",
+    "**/*.tsx"
   ],
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "."
+    "rootDir": "src",
+    "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo"
   },
   "references": [
     {
