--- a/packages/b/tsconfig.json
+++ b/packages/b/tsconfig.json
@@ -1,10 +1,19 @@
 {
   "extends": "@mono/tsconfig/packages",
+  "exclude": [
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "dist",
+    "node_modules"
+  ],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx"
+  ],
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "isolatedDeclarations": false,
-    "emitDeclarationOnly": true,
-    "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo"
+    "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo",
+    "isolatedDeclarations": false
   }
 }
