--- a/apps/redwood-sdk/package.json
+++ b/apps/redwood-sdk/package.json
@@ -28,9 +28,7 @@
     "@prisma/client": "~6.8.2",
     "@simplewebauthn/browser": "^13.1.0",
     "@simplewebauthn/server": "^13.1.1",
-    "rwsdk": "0.0.88"
-  },
-  "devDependencies": {
+    "rwsdk": "0.0.88",
     "@mono/tsconfig": "workspace:*",
     "vite": "catalog:",
     "@types/node": "^22.15.29",
