refactor: use tsconfig configdir

--- a/apps/app-1/tsconfig.json
+++ b/apps/app-1/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@mono/tsconfig/apps",
+  "extends": "@mono/tsconfig/apps.json",
   "exclude": [
     "**/node_modules",
     "**/dist"
