--- a/packages/c/tsconfig.json
+++ b/packages/c/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@mono/tsconfig/packages",
+  "extends": "@mono/tsconfig/packages.json",
   "exclude": [
     "**/*.test.ts",
     "**/*.test.tsx",
