--- a/tooling/script-bun/package.json
+++ b/tooling/script-bun/package.json
@@ -1,9 +1,12 @@
 {
   "version": "0.0.0",
-  "name": "@mono/script-bun",
+  "name": "@mono/scripts",
   "type": "module",
   "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "scripts": {
+    "dev": "tsc -p ./tsconfig.json --watch",
+    "build": "tsc -p ./tsconfig.json"
+  },
   "dependencies": {
     "@types/bun": "catalog:",
     "@mono/tsconfig": "workspace:*",
