--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
       "@types/node": "^22.15.29",
       "bunup": "^0.8.25",
       "typescript": "^5.8.3",
-      "vite": "^6.3.5"
+      "vite": "^6.3.5",
+      "wrangler": "^4.19.1",
+      "rwsdk": "^0.1.0-alpha.3"
     }
   },
   "dependencies": {
