--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,9 +1,18 @@
 {
   "version": "0.0.0",
   "name": "@mono/utils",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
   "type": "module",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "default": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "scripts": {
+    "build": "tsc -p tsconfig.build.json",
+    "dev": "tsc -p tsconfig.json --watch"
+  },
   "dependencies": {
     "valibot": "^1.1.0",
     "@mono/tsconfig": "workspace:*"
