--- a/tooling/script-bun/package.json
+++ b/tooling/script-bun/package.json
@@ -11,6 +11,10 @@
     "@types/bun": "catalog:",
     "@mono/tsconfig": "workspace:*",
     "@mono/utils": "workspace:*",
-    "@types/node": "^22.15.29"
+    "@types/js-yaml": "^4.0.9",
+    "@types/minimatch": "^5.1.2",
+    "js-yaml": "^4.1.0",
+    "minimatch": "^9.0.4",
+    "comment-json": "^4.2.4"
   }
 }
